--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
      <!-- <base href="http://localhost:3000/bline-admin/"> -->
-      <base href="https://espsofttech.org/bline-admin/">
+      <base href="https://espsofttech.org/bline-admin-new/">
                                                        
       <!-- <base href="https://nxft.io/nxft_dev/fff8jsue9p/"> -->
   <meta charset="utf-8" />
