--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en"> 
 
 <head>
-     <base href="http://localhost:3000/bline-admin-new/">
-      <!-- <base href="https://espsofttech.org/bline-admin-new/"> -->
-                                                       
+         <!-- <base href="http://localhost:3001/bline-admin-new/"> -->
+      <base href="https://espsofttech.org/bline-admin-new/">
+                                              
       <!-- <base href="https://nxft.io/nxft_dev/fff8jsue9p/"> -->
   <meta charset="utf-8" />
   <link rel="icon
@@ -174,6 +174,10 @@
 
 
 <script>var i,acc=document.getElementsByClassName("accordion");for(i=0;i<acc.length;i++)acc[i].addEventListener("click",(function(){this.classList.toggle("active");var e=this.nextElementSibling;"block"===e.style.display?e.style.display="none":e.style.display="block"}))</script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+
 </body>
 
 </html>
