--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en"> 
 
 <head>
-         <base href="http://localhost:3001/bline-admin-new/">
-      <!-- <base href="https://espsofttech.org/bline-admin-new/"> -->
+         <!-- <base href="http://localhost:3001/bline-admin-new/"> -->
+      <base href="https://espsofttech.org/bline-admin-new/">
                                               
       <!-- <base href="https://nxft.io/nxft_dev/fff8jsue9p/"> -->
   <meta charset="utf-8" />
